Add jbang options for GraalVM's native-image.