@@ -2,6 +2,7 @@
 //JAVA 20
 //COMPILE_OPTIONS --enable-preview -source 20 --add-modules=jdk.incubator.vector
 //RUNTIME_OPTIONS --enable-preview --add-modules=jdk.incubator.vector
+//NATIVE_OPTIONS  --enable-preview --add-modules=jdk.incubator.vector --initialize-at-build-time=Llama2 -Dllama2.VectorAPI=false
 
 /* Inference for Llama-2 Transformer model in pure Java */
 
